[package]
name = "soil"
version = "0.1.0"
authors = ["Peter Lamby <dev@peterlamby.de>"]
edition = "2021"

[dependencies]
bytes = "1"
futures-core = "0.3"
futures = "0.3"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"]}
warp = { version = "0.3", features = [] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "offline", "time", "chrono"] }
serde = { version = "1", features = [] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.9"

[profile.dev]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
